--- a/examples/shard-worker.config.example
+++ b/examples/shard-worker.config.example
@@ -124,7 +124,7 @@ maximum_action_timeout: {
 redis_shard_backplane_config: {
   # The URI of the redis cluster endpoint. This must
   # be a single URI, regardless of the layout of the cluster
-  redis_uri: "redis://buildfarm-redis:6379"
+  redis_uri: "redis://buildfarm-server:6379"
 
   # The password used to authenticate redis clients, if required
   # redis_password: "mypass"
